# kogayonon

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  cpp.hint  cpy.bat  imgui.ini  imgui_config.ini  kogayonon.sln  kogayonon.vcxproj  kogayonon.vcxproj.filters  log.txt  main.cpp
core/: CMakeLists.txt
core/include/core/asset_manager/: asset_manager.hpp  assimp_loader.hpp  cgltf_loader.hpp
core/include/core/ecs/: entity.hpp  entity_types.hpp  main_registry.hpp  registry.hpp
core/include/core/event/: app_event.hpp  event.hpp  event_dispatcher.hpp  event_emitter.hpp  file_events.hpp  project_event.hpp  scene_events.hpp
core/include/core/input/: keyboard_events.hpp  mouse_events.hpp
core/include/core/project/: project.hpp  project_manager.hpp
core/include/core/scene/: scene.hpp  scene_manager.hpp
core/include/core/systems/: scene_rendering_system.hpp  scripting_system.hpp
core/include/core/utils/: meta_utilities.hpp
core/src/: asset_manager.cpp  entity.cpp  event_dispatcher.cpp  main_registry.cpp  project_manager.cpp  registry.cpp  scene.cpp  scene_events.cpp  scene_manager.cpp  scene_rendering_system.cpp  scripting_system.cpp
dependencies/imgui/: CMakeLists.txt
dependencies/imgui/include/: imconfig.h  imgui.h  imgui_impl_vulkan.h  imgui_internal.h
dependencies/imgui/src/: imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_glfw.cpp  imgui_impl_sdl2.cpp  imgui_impl_vulkan.cpp  imgui_tables.cpp  imgui_widgets.cpp
dependencies/imguizmo/: CMakeLists.txt
dependencies/imguizmo/src/: ImCurveEdit.cpp
dependencies/lua/: CMakeLists.txt
dependencies/soil2/: CMakeLists.txt
editor/: CMakeLists.txt
editor/include/editor/: editor.hpp
editor/src/: editor.cpp  main.cpp
graphics/: CMakeLists.txt
graphics/include/graphics/: utils.hpp  vulkan_context.hpp  vulkan_device.hpp  vulkan_pipeline.hpp  vulkan_swapchain.hpp
graphics/src/: vulkan_device.cpp  vulkan_swapchain.cpp
gui/: CMakeLists.txt
gui/include/gui/: vulkan_imgui_renderer.hpp
gui/include/gui/imgui_windows/: file_explorer.hpp  imgui_base.hpp  scene_hierarchy.hpp  viewport.hpp
gui/include/gui/utils/: imgui_utils.hpp
gui/src/: file_explorer.cpp  imgui_base.cpp  scene_hierarchy.cpp  viewport.cpp  vulkan_imgui_renderer.cpp
kogayonon_app/: CMakeLists.txt
kogayonon_app/include/app/: app.h  app.hpp
kogayonon_app/src/: app.cpp  main.cpp
kogayonon_benchmark/: CMakeLists.txt
kogayonon_benchmark/include/: benchmark.hpp
kogayonon_benchmark/src/: main.cpp
kogayonon_core/: CMakeLists.txt
kogayonon_core/include/core/ecs/: entity.h  entity.hpp  entity_types.hpp  main_registry.h  main_registry.hpp  registry.h  registry.hpp  registry_manager.h
kogayonon_core/include/core/event/: app_event.h  app_event.hpp  event.hpp  event_dispatcher.h  event_dispatcher.hpp  event_dispatcher.inl  event_emitter.hpp  event_manager.h  event_manager.hpp  file_events.hpp  project_event.hpp  scene_events.hpp
kogayonon_core/include/core/input/: key_codes.h  key_codes.hpp  keyboard_events.h  keyboard_events.hpp  keyboard_state.h  keyboard_state.hpp  mouse_codes.hpp  mouse_events.h  mouse_events.hpp
kogayonon_core/include/core/project/: project.hpp  project_manager.hpp
kogayonon_core/src/: entity.cpp  event_dispatcher.cpp  event_manager.cpp  main_registry.cpp  project_manager.cpp  registry.cpp  registry_manager.cpp  rendering_system.cpp  scene.cpp  scene_events.cpp  scene_manager.cpp  scripting_system.cpp
kogayonon_core/src/components/: texture_component.cpp
kogayonon_game/: CMakeLists.txt
kogayonon_game/include/game/: game.hpp
kogayonon_game/src/: game.cpp
kogayonon_gui/: CMakeLists.txt
kogayonon_gui/include/gui/: debug_window.h  debug_window.hpp  display.h  display.hpp  entity_properties.hpp  file_explorer.h  file_explorer.hpp  folder_display.h  folder_display.hpp  imgui_manager.h  imgui_manager.hpp  imgui_window.h  imgui_window.hpp  performance_window.hpp  project_window.hpp  scene_hierarchy.h  scene_hierarchy.hpp  scene_viewport.h  scene_viewport.hpp
kogayonon_gui/include/imgui_utils/: imgui_utils.h
kogayonon_gui/src/: debug_window.cpp  display.cpp  entity_properties.cpp  file_explorer.cpp  folder_display.cpp  imgui_manager.cpp  imgui_window.cpp  performance_window.cpp  project_window.cpp  scene_hierarchy.cpp  scene_viewport.cpp
kogayonon_rendering/: CMakeLists.txt
kogayonon_rendering/include/rendering/: batcher.h  framebuffer.h  framebuffer.hpp  light_shader_storagebuffer.hpp  lightcount_uniformbuffer.hpp  model_batch_renderer.h  opengl_framebuffer.hpp  renderer.h  renderer.hpp  shader_storagebuffer.hpp  skeleton_uniformbuffer.hpp  uniformbuffer.hpp
kogayonon_rendering/src/: camera.cpp  framebuffer.cpp  light_shader_storagebuffer.cpp  lightcount_uniformbuffer.cpp  opengl_framebuffer.cpp  renderer.cpp  skeleton_uniformbuffer.cpp
kogayonon_resources/: CMakeLists.txt
kogayonon_resources/include/resources/: directional_light.hpp  light.hpp  light_types.hpp  mesh.h  mesh.hpp  mesh_helper.h  mesh_helper.hpp  model.h  model.hpp  pointlight.hpp  skeleton.hpp  skin.hpp  spotlight.hpp  texture.h  texture.hpp  vertex.h  vertex.hpp
kogayonon_resources/src/: mesh.cpp  mesh_helper.cpp  model.cpp  texture.cpp
kogayonon_utilities/: CMakeLists.txt
kogayonon_utilities/src/: asset_manager.cpp  assimp_loader.cpp  cgltf_loader.cpp  configurator.cpp  directory_watcher.cpp  json_serializer.cpp  jsoner.cpp  script.cpp  script_compiler.cpp  serializer.cpp  shader.cpp  shader_manager.cpp  task_manager.cpp  time_tracker.cpp  yaml_serializer.cpp
kogayonon_window/: CMakeLists.txt
kogayonon_window/include/window/: window.h  window.hpp
kogayonon_window/src/: window.cpp
src/app/: app.h  (+1 more)
utilities/: CMakeLists.txt
utilities/src/: assimp_loader.cpp  cgltf_loader.cpp  config_manager.cpp  configurator.cpp  directory_watcher.cpp  json_serializer.cpp  script.cpp  script_compiler.cpp  shader.cpp  shader_manager.cpp  task_manager.cpp  time_tracker.cpp  yaml_serializer.cpp
window/: CMakeLists.txt
window/include/window/: window.hpp
window/src/: window.cpp
(+406 files in other folders)
